mudando a fonte e melhorando a estrutura

--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -12,10 +12,10 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Roboto -->
+    <!-- Font Nunito-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="assest/css/index.css">
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+<!--Seguindo a mesma estrutura mas fazendo alguma coisas diferentes -->
