--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <h1>Pokedex, a primeira geração de Pokemons</h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
